Replaced string utf-8 with static type